src/snapshots/jk__app__tests__snapshot_renders_diffedit_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Diffedit Result
===============

Summary: Rebased 1 descendant commits after diff edit

Rebased 1 descendant commits after diff edit

Tip: run `log`, `status`, or `diff` to verify the resulting history
