src/snapshots/jk__app__tests__snapshot_renders_file_list_wrapper_view.snap
---
source: src/app.rs
assertion_line: 2471
expression: "rendered.join(\"\\n\")"
---
File List
=========

Summary: 3 files listed

src/app.rs
src/flows.rs
README.md

Tip: use `show`/`diff` with selection to inspect file-affecting revisions
