src/snapshots/jk__app__tests__snapshot_renders_file_show_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
File Show
=========

Summary: 3 content lines

fn main() {
    println!("hi");
}

Tip: use `show`/`diff -r <rev>` to inspect surrounding change context
