src/snapshots/jk__app__tests__snapshot_renders_file_untrack_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
File Untrack
============

Summary: 1 output line

Stopped tracking target/generated.txt

Tip: ensure paths are ignored before untracking and confirm with `status`
