src/snapshots/jk__app__tests__snapshot_renders_git_push_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Git Push
========

Summary: 2 output lines

Pushed bookmark main to origin
Done.

Tip: push stays confirm-gated with a dry-run preview when available
