src/snapshots/jk__app__tests__snapshot_renders_interdiff_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Interdiff View
==============

Modified regular file src/app.rs:
    1      1: use std::collections::HashMap;

Tip: compare patch intent with `interdiff --from ... --to ...`
