src/snapshots/jk__app__tests__snapshot_renders_metaedit_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Metaedit Result
===============

Summary: Working copy now at: abcdef12 updated metadata

Working copy now at: abcdef12 updated metadata

Tip: run `show` or `log` to inspect the updated revision
