src/snapshots/jk__app__tests__snapshot_renders_new_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
New Result
==========

Summary: Working copy now at: abcdef12 new change

Working copy now at: abcdef12 new change

Tip: run `show` or `log` to inspect the updated revision
