src/snapshots/jk__app__tests__snapshot_renders_next_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Next Result
===========

Summary: Working copy now at: abcdef12 next revision

Working copy now at: abcdef12 next revision

Tip: run `show` or `diff` to inspect the selected revision
