src/snapshots/jk__app__tests__snapshot_renders_operation_log_wrapper_view.snap
---
source: src/app.rs
expression: "rendered.join(\"\\n\")"
---
Operation Log
=============

@  fac974146f86 user 5 seconds ago
│  snapshot working copy

Tip: restore/revert operations stay confirm-gated with previews
